--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
+  "homepage": "https://bhanu2531.github.io/Foodify/",
   "name": "food-order",
   "private": true,
-  "homepage": "https://bhanu2531.github.io/Foodify",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
